--- a/comicagg/templates/base.html
+++ b/comicagg/templates/base.html
@@ -26,6 +26,7 @@
 			var url_save_selection = '{% url save_selection %}';
 			var url_add = '{% url add_comic_ajax %}';
 			var url_remove = '{% url remove_comic_ajax %}';
+            var url_remove_list = '{% url ajax_remove_comic_list %}';
 			var url_report = '{% url report_comic %}';
 			var url_comic_list = '{% url comic_list %}';
 			var url_comic_list_load = '{% url comic_list_load %}';
