Small css changes, changed the url for the add page.

--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -331,6 +331,10 @@ button:hover {
 	vertical-align:middle;
 }
 
+#organize p, #add > p {
+    margin:0 0 1em 2em;
+}
+
 /************/
 /* Add page */
 /************/
