--- a/comicagg/templates/agregator/organize_add.html
+++ b/comicagg/templates/agregator/organize_add.html
@@ -21,6 +21,7 @@ dojo.addOnLoad(initAdd);
 {% block orgcontent %}
 <div id="add">
 	<h3>{% trans "Add comics" %}</h3>
+	<p>{% trans "Click on a comic to add or remove it." %}</p>
 	<div id="comic_info_outer">
         <p><b>{% trans "Hover over a comic to see details." %}</b></p>
         <div id="comic_info">
