Make templates use minified javascript code.

--- a/comicagg/templates/base.html
+++ b/comicagg/templates/base.html
@@ -9,7 +9,7 @@
 		<link rel="shortcut icon" href="{{ mediaurl }}images/favicon.png" type="image/png" />
 		<script src="{{ mediaurl }}js/lib/prototype.js" type="text/javascript"></script>
 		<script src="{{ mediaurl }}js/lib/scriptaculous.js" type="text/javascript"></script>
-		<script src="{{ mediaurl }}js/all.js" type="text/javascript"></script>
+		<script src="{{ mediaurl }}js/all.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			var titlebase = " Comic Aggregator";
 			var url_hide_new_comics = '{% url hide_new_comics %}';
