--- a/comicagg/templates/agregator/organize_organize.html
+++ b/comicagg/templates/agregator/organize_organize.html
@@ -4,7 +4,7 @@
 {% block extra_head %}
         <link rel="stylesheet" href="{{ mediaurl }}css/dnd.css" type="text/css"/>
         <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
-        <script src="{{ mediaurl}}js/organize.js" type="text/javascript"></script>
+        <script src="{{ mediaurl}}js/organize.min.js" type="text/javascript"></script>
         <script type="text/javascript">
 var usercomics = [];
 var usercomics_id = [];
