--- a/comicagg/templates/admin/reported.html
+++ b/comicagg/templates/admin/reported.html
@@ -5,9 +5,13 @@
 
 {% block content %}
 <div id="content-main">
-{% for ch in chs %}
+{% for k,ch in chs.items %}
+{% if ch %}
 <a href="/admin/agregator/comichistory/{{ ch.id }}/">comic history id={{ ch.id }}</a><br/>
 <img src="{{ ch.get_url }}" style="width:500px"/><br/>
+{% else %}
+history id:{{ k }} no existe
+{% endif %}
 <hr/>
 {% endfor %}
 </div>
