Appended accounts_ to all url names for the accounts module

--- a/comicagg/templates/accounts/password_change_form.html
+++ b/comicagg/templates/accounts/password_change_form.html
@@ -13,7 +13,7 @@
   </ul>
 </div>
 {% endif %}
-<form action="{% url change_password %}" method="post">
+<form action="{% url accounts_change_password %}" method="post">
   <table>
     <tr {% if form.old_password.errors %}class="error_tr"{% endif %}>
       <td><label>{% trans 'Current password.'%}</label></td>
