--- a/comicagg/templates/accounts/password_change_done.html
+++ b/comicagg/templates/accounts/password_change_done.html
@@ -2,7 +2,8 @@
 {% load i18n %}
 {% block title %}{% trans 'Password changed'%}{% endblock %}
 {% block content %}
-<h3>{% trans 'Change password'%}</h3>
-<p class="info">{% trans 'Your password has been changed.'%}</p>
-<div class="text_center"><a href="{% url edit_profile %}">{% trans 'Back to account settings.'%}</a></div>
+<div class="loginbox">
+  <h3>{% trans 'Change password'%}</h3>
+  <p class="info">{% trans 'Your password has been changed.'%}</p>
+</div>
 {% endblock %}
