--- a/comicagg/templates/accounts/password_reset_email.html
+++ b/comicagg/templates/accounts/password_reset_email.html
@@ -6,7 +6,7 @@
 
 {% trans "Feel free to change this password by going to this page:" %}
 
-{{ domain }}{% url change_password %}
+{{ domain }}{% url accounts:password_change %}
 
 {% trans "Your username, in case you've forgotten:" %} {{ user.username }}
 
