--- a/comicagg/templates/accounts/login_form.html
+++ b/comicagg/templates/accounts/login_form.html
@@ -13,7 +13,7 @@
 	{% endif %}
 	<div class="text_left">
 		<div id="error"></div>
-		<form method="post" action="{% url accounts_login %}" enctype="application/x-www-form-urlencoded">
+		<form method="post" action="{% url accounts:login %}" enctype="application/x-www-form-urlencoded">
 			<table>
 				<tr>
 					<td><label class="small_text">{% trans 'User '%}</label></td>
@@ -29,7 +29,7 @@
 			</table>
 		</form>
 	</div>
-	<p>{% trans "Don't you have an account?" %} <a href="{% url accounts_register %}">{% trans "Create a one." %}</a></p>
-	<p>{% trans "Can't remember your password?" %} <a href="{% url accounts_reset_password %}">{% trans 'Send me a new password.'%}</a></p>
+	<p>{% trans "Don't you have an account?" %} <a href="{% url accounts:register %}">{% trans "Create one" %}</a></p>
+	<p>{% trans "Can't remember your password?" %} <a href="{% url accounts:password_reset %}">{% trans 'Send me a new password'%}</a></p>
 </div>
 {% endblock %}
