--- a/comicagg/templates/admin/reported.html
+++ b/comicagg/templates/admin/reported.html
@@ -8,7 +8,7 @@
 {% for k,ch in chs.items %}
 {% if ch %}
 <a href="/admin/agregator/comichistory/{{ ch.id }}/">comic history id={{ ch.id }}</a><br/>
-<img src="{{ ch.get_url }}" style="width:500px"/><br/>
+<img src="{{ ch.get_url }}" style="width:500px" title="{{ ch.alt_text }}"/><br/>
 {% else %}
 history id:{{ k }} no existe
 {% endif %}
