--- a/comicagg/templates/base.html
+++ b/comicagg/templates/base.html
@@ -12,14 +12,14 @@
 		<script src="{{ mediaurl }}js/all.min.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			var titlebase = " Comic Aggregator";
-            var url_add = '{% url ajax_add_comic %}';
-            var url_forget_new_blogs = '{% url ajax_forget_new_blogs %}';
-            var url_mark_all_read = '{% url ajax_mark_all_read %}';
-            var url_mark_as_read = '{% url ajax_mark_read %}';
-            var url_remove = '{% url ajax_remove_comic %}';
-            var url_remove_list = '{% url ajax_remove_comic_list %}';
-            var url_report = '{% url report_comic %}';
-            var url_save_selection = '{% url save_selection %}';
+            var url_add = '{% url aggregator:ajax:add_comic %}';
+            var url_forget_new_blogs = '{% url news:ajax:forget_new_blogs %}';
+            var url_mark_all_read = '{% url aggregator:ajax:mark_all_read %}';
+            var url_mark_as_read = '{% url aggregator:ajax:mark_read %}';
+            var url_remove = '{% url aggregator:ajax:remove_comic %}';
+            var url_remove_list = '{% url aggregator:ajax:remove_comic_list %}';
+            var url_report = '{% url aggregator:ajax:report_comic %}';
+            var url_save_selection = '{% url aggregator:ajax:save %}';
 			var media_url = '{{ mediaurl }}';
 		</script>
 {% block extra_head %}{% endblock %}
@@ -28,11 +28,16 @@
 		<div id="head">
 			{% if user.is_authenticated %}
 			<div id="head_right">
-				<i><b>{{ user.username }}</b></i>&nbsp;&nbsp;-&nbsp;&nbsp;<span class=""><a href="{% url blog_index %}">{% trans "news" %}<span id="menuNewNewsCounter">{% if newnews_count %} ({{ newnews_count}}){% endif %}</a></span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url accounts_logout %}">{% trans "logout" %}</a></span>
+				<i><b>{{ user.username }}</b></i>&nbsp;&nbsp;-&nbsp;&nbsp;<span class=""><a href="{% url news:index %}">{% trans "news" %}<span id="menuNewNewsCounter">{% if newnews_count %} ({{ newnews_count}}){% endif %}</a></span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url accounts:logout %}">{% trans "logout" %}</a></span>
 			</div>
 			<div id="head_left">
-				Comics:&nbsp;&nbsp;<span class=""><a href="{% url read %}">{% trans "read" %}<span id="menuUnreadCounter">{% if unread_count %} ({{ unread_count}}){% endif %}</span></a></span>&nbsp;&nbsp;<a href="{% url organize_add %}">{% trans "choose" %}<span id="menuNewComicCounter">{% if newcomic_count %} ({{ newcomic_count}}){% endif %}</span></a></span>&nbsp;&nbsp;<span class=""><a href="{% url organize %}">{% trans "organize" %}</a>&nbsp;&nbsp;<span class=""><a href="{% url request_index %}">{% trans "request" %}</a></span>
+				Comics:&nbsp;&nbsp;<span class=""><a href="{% url aggregator:read %}">{% trans "read" %}<span id="menuUnreadCounter">{% if unread_count %} ({{ unread_count}}){% endif %}</span></a></span>&nbsp;&nbsp;<a href="{% url aggregator:add %}">{% trans "choose" %}<span id="menuNewComicCounter">{% if newcomic_count %} ({{ newcomic_count}}){% endif %}</span></a></span>&nbsp;&nbsp;<span class=""><a href="{% url aggregator:organize %}">{% trans "organize" %}</a>&nbsp;&nbsp;<span class=""><a href="{% url aggregator:requests %}">{% trans "request" %}</a></span>
 			</div>
+			{% else %}
+      <div id="head_right">
+        <span class=""><a href="{% url news:index %}">{% trans "news" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url accounts:login %}">{% trans "login" %}</a></span>
+      </div>
+      <div id="head_left">&nbsp;</div>
 			{% endif %}
 			<div id="branding">
 				<a href="/">Comic Aggregator</a>
