--- a/comicagg/templates/blog/side.html
+++ b/comicagg/templates/blog/side.html
@@ -3,10 +3,14 @@
   <h4>{% trans "Recent posts" %}</h4>
   <ul>
 {% for item in posts %}
+{% if new_posts %}
     <li {% if item|new:user %}class="bolder"{% endif %}><a onclick="Element.scrollToExtra('p{{ item.id }}', -40)">{{ item.title }}</a></li>
+{% else %}
+    <li ><a onclick="Element.scrollToExtra('p{{ item.id }}', -40)">{{ item.title }}</a></li>
+{% endif %}
 {% endfor %}
   </ul>
 {% if posts and not archive %}
-  <p class="all_link"><a href="{% url blog_archive %}">{% trans "All posts" %}</a></p>
+  <p class="all_link"><a href="{% url news:archive %}">{% trans "All posts" %}</a></p>
 {% endif %}
 </div>
