--- a/comicagg/templates/base.html
+++ b/comicagg/templates/base.html
@@ -28,14 +28,14 @@
 		<div id="head">
 			{% if user.is_authenticated %}
 			<div id="head_right">
-				<i><b>{{ user.username }}</b></i>&nbsp;&nbsp;-&nbsp;&nbsp;<span class=""><a href="{% url news:index %}">{% trans "news" %}<span id="menuNewNewsCounter">{% if newnews_count %} ({{ newnews_count}}){% endif %}</a></span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url accounts:logout %}">{% trans "logout" %}</a></span>
+				<i><b>{{ user.username }}</b></i>&nbsp;&nbsp;-&nbsp;&nbsp;<span class=""><a href="{% url news:index %}">{% trans "news" %}<span id="menuNewNewsCounter">{% if newnews_count %} ({{ newnews_count}}){% endif %}</a></span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url contact %}">{% trans "contact" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url accounts:logout %}">{% trans "logout" %}</a></span>
 			</div>
 			<div id="head_left">
 				Comics:&nbsp;&nbsp;<span class=""><a href="{% url aggregator:read %}">{% trans "read" %}<span id="menuUnreadCounter">{% if unread_count %} ({{ unread_count}}){% endif %}</span></a></span>&nbsp;&nbsp;<a href="{% url aggregator:add %}">{% trans "choose" %}<span id="menuNewComicCounter">{% if newcomic_count %} ({{ newcomic_count}}){% endif %}</span></a></span>&nbsp;&nbsp;<span class=""><a href="{% url aggregator:organize %}">{% trans "organize" %}</a>&nbsp;&nbsp;<span class=""><a href="{% url aggregator:requests %}">{% trans "request" %}</a></span>
 			</div>
 			{% else %}
       <div id="head_right">
-        <span class=""><a href="{% url news:index %}">{% trans "news" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url accounts:login %}">{% trans "login" %}</a></span>
+        <span class=""><a href="{% url news:index %}">{% trans "news" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url contact %}">{% trans "contact" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url accounts:login %}">{% trans "login" %}</a></span>
       </div>
       <div id="head_left">&nbsp;</div>
 			{% endif %}
