Fix indentation in urls.py, make forget new comic use a POST request instead of GET

--- a/comicagg/templates/base.html
+++ b/comicagg/templates/base.html
@@ -14,6 +14,7 @@
 			var titlebase = " Comic Aggregator";
             var url_add = '{% url aggregator:ajax:add_comic %}';
             var url_forget_new_blogs = '{% url news:ajax:forget_new_blogs %}';
+            var url_forget_new_comic = '{% url aggregator:ajax:forget_new_comic %}';
             var url_mark_all_read = '{% url aggregator:ajax:mark_all_read %}';
             var url_mark_as_read = '{% url aggregator:ajax:mark_read %}';
             var url_remove = '{% url aggregator:ajax:remove_comic %}';
