Fixed typo, admin root for django v1.3 and update settings.py

--- a/comicagg/templates/agregator/read.html
+++ b/comicagg/templates/agregator/read.html
@@ -24,7 +24,7 @@
 	<div class="top_info">
 		{% if unread_count %}
 		<div id="mark_all_read">
-			<a onclick="mark_all_read()">{% trans "Mark all comics as unread" %}</a>
+			<a onclick="mark_all_read()">{% trans "Mark all comics as read" %}</a>
 			<img style="display:none" id="mark_all_read_anim" src="{{ mediaurl }}images/loaderarrows.gif" alt="working"/>
 		</div>
 		{% endif %}
