--- a/comicagg/templates/agregator/read.html
+++ b/comicagg/templates/agregator/read.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 <!-- {% block title %}{% trans 'Read' %} -{% endblock %} -->
 {% block extra_head %}
-		<script src="{{ mediaurl }}js/read.min.js" type="text/javascript"></script>
+		<script src="{{ mediaurl }}js/read.js" type="text/javascript"></script>
 {% endblock%}
 {% block onload %}onReadLoad();{% endblock %}
 {% block content %}
