--- a/comicagg/templates/agregator/request_index.html
+++ b/comicagg/templates/agregator/request_index.html
@@ -24,6 +24,70 @@
         <script type="text/javascript">setTimeout('Element.hide("thanks")', 10000);</script>
         {% endif %}
     </div>
+    <br/>
+    <div>
+        {% trans "There are a number of authors that don't want their comics in this website so please don't ask for the following comics as we won't add the to the list. Thanks!" %}
+        <ul id="no_request_list">
+            <li>Adam@Home</li>
+            <li>Baldo (English)</li>
+            <li>Baldo (Espanol)</li>
+            <li>Between Failures</li>
+            <li>Calvin and Hobbes (English)</li>
+            <li>Calvin and Hobbes (Espanol)</li>
+            <li>Close to Home</li>
+            <li>Ctrl+Alt+Del</li>
+            <li>Ctrl+Alt+Del Sillies</li>
+            <li>Cul de Sac</li>
+            <li>Dresden Codak</li>
+            <li>Doonesbury</li>
+            <li>Earthsong</li>
+            <li>Evil Inc.</li>
+            <li>For Better or For Worse</li>
+            <li>Foxtrot</li>
+            <li>Foxtrot Classics</li>
+            <li>Fred Basset</li>
+            <li>Garfield</li>
+            <li>Garfield Minus Garfield</li>
+            <li>Heart of the City</li>
+            <li>In the Bleachers</li>
+            <li>Least I Could Do</li>
+            <li>Lio</li>
+            <li>Looking for Group</li>
+            <li>Married to the sea</li>
+            <li>Natalie Dee</li>
+            <li>Non Sequitur</li>
+            <li>NPC Comic</li>
+            <li>Nuklear Power 8-Bit Theater</li>
+            <li>Overboard</li>
+            <li>Pat Oliphant</li>
+            <li>Peanuts</li>
+            <li>Penny & Aggie</li>
+            <li>Pooch Café</li>
+            <li>Questionable Content</li>
+            <li>Red & Rover</li>
+            <li>Requiem</li>
+            <li>Sheldon</li>
+            <li>Sorcery 101</li>
+            <li>Something Positive</li>
+            <li>Super Effective</li>
+            <li>Superpoop</li>
+            <li>Ted Rall</li>
+            <li>Theater Hopper</li>
+            <li>The Adventures of Dr. McNinja</li>
+            <li>The Argyle Sweater</li>
+            <li>The Book of Biff</li>
+            <li>The Zombie Hunters</li>
+            <li>Tom the Dancing Bug</li>
+            <li>Toothpaste for dinner</li>
+            <li>Unshelved</li>
+            <li>VG Cats</li>
+            <li>VG Cats Adventure Log</li>
+            <li>Warbot</li>
+            <li>What The Duck</li>
+            <li>Ziggy</li>
+        </ul>
+    </div>
+    <div style="clear:both"></div>
     <h4>{% trans "Pending requests" %}</h4>
     <ul>
     {% for req in pending %}
