--- a/comicagg/templates/agregator/read.html
+++ b/comicagg/templates/agregator/read.html
@@ -45,9 +45,11 @@
 			{% for unread in unreadlist %}
 			{%  ifchanged %}<h5>{{ unread.history.date|date:"d F Y" }}</h5>{% endifchanged %}
 			<img id="imgu{{ unread.id }}" src="{{ mediaurl }}images/striploading.gif" alt="new - loading..." title="{{ unread.history.alt_text|default_if_none:""|safe }}"/><br/>
+			<div class="alttext">{{ unread.history.alt_text|default_if_none:""|safe }}</div>
 			{% empty %}
 			<h5>{{ comic.last_check|date:"d F Y" }}</h5>
 			<img id="imgl{{ comic.id }}" src="{{ mediaurl }}images/striploading.gif" alt="last - loading..." title="{{ comic.last_image_alt_text|default_if_none:""|safe }}"/>
+			<div class="alttext">{{ comic.last_image_alt_text|default_if_none:""|safe }}</div>
 			{% endfor %}
 		{% endif %}
 		</div>
