--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -181,8 +181,7 @@ button:hover {
 	-moz-border-radius:10px;
 	-webkit-border-radius:10px;
 	padding:5px 1em 5px 1em;
-	margin-top:10px;
-	margin-bottom:10px;
+	margin-bottom:20px;
 /* 	position:relative; */
 }
 #read .comic h3 {
@@ -232,6 +231,7 @@ button:hover {
 	background:white;
 	border:1px solid #eeeeee;
 	padding:2px;
+	margin-bottom:10px;
 	-moz-border-radius:4pt;
 	-webkit-border-radius:4pt;
 /* 	z-index:-10; */
@@ -244,6 +244,17 @@ button:hover {
 }
 #read .top_info div img {
 	vertical-align:middle;
+}
+
+#next_comic_bar {
+    position: fixed;
+    right:5px;
+    bottom:5px;
+    background-color: white;
+    border:1px solid gray;
+    padding:2px;
+    -moz-border-radius:4pt;
+    -webkit-border-radius:4pt;
 }
 
 /******************/
