--- a/comicagg/templates/agregator/read.html
+++ b/comicagg/templates/agregator/read.html
@@ -83,7 +83,7 @@
 		<h5 id="outc{{ comic.id }}"></h5>
 	</div>
 	{% endfor %}
-	<div id="noComicsSelected" style="display:none" class="box">{% trans "You haven't selected any comics!" %}</div>
+	<div id="noComicsSelected" style="display:none" class="box">{% trans "No comics to show here. Use the menu in the top to add comics." %}</div>
 	</div>
 </div>
 {% endblock %}
